# cmake-init-build-tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  precompiler.cmake  variables.cmake
source/: lib.cpp  lib.hpp  lib.prec  main.cpp
test/: CMakeLists.txt
test/source/: build-tool_test.cpp
tools/precompiler/: CMakeLists.txt
tools/precompiler/source/: main.cpp
